notused/tests/canary-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-test
  annotations:
    linkerd.io/inject: enabled
  labels:
    istio-injection: disabled
    appmesh.k8s.aws/sidecarInjectorWebhook: disabled
