notused/tests/canary-test/podinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo
  namespace: canary-test
  labels:
    app: podinfo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:9898;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  tls:
  - hosts:
    - podinfo.qa.rercloud.co.uk
    secretName: podinfo-ssl-secret
  rules:
  - host: podinfo.qa.rercloud.co.uk

    http:
      paths:
      - backend:
          serviceName: podinfo
          servicePort: 9898
        path: /
